# Difference-Generator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  pytest.yml
gendiff/: __init__.py  generate_diff.py  get_diff_tree.py  load_data.py  parse_args.py  parser.py  to_format.py
gendiff/formatter/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_load_data.py  test_stylish.py
tests/fixtures/: result-json.txt  result2-json.txt
