[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference Generator. This is a tool that determines the difference between two data structures."
authors = ["Irina Kurus <evans.mira@yandex.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3.8.1",
  "Operating System :: POSIX :: Linux",
  "Natural Language :: English"
]
repository = "https://github.com/irakuruss/python-project-50"

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
